# task_manager

./: CMakeLists.txt  addCategoryWindow (copy).h  addCategoryWindow.cpp  category.cpp  category.h  categorymanager.cpp  categorymanager.h  controller.cpp  controller.h  goal.cpp  goal.h  main.cpp  mainwindow.cpp  mainwindow.h
Controller/: controller.cpp  controller.h
Model/: category.cpp  category.h  categorymanager.cpp  categorymanager.h  goal.cpp  goal.h  subject.h
View/: addCategoryDialog.cpp  addCategoryDialog.h  addTaskDialog.cpp  addTaskDialog.h  categoryWidget.cpp  categoryWidget.h  mainwindow.cpp  mainwindow.h  observer.h  taskWidget.cpp  taskWidget.h
